# eli-proc-extra

./: .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit
kill/: CMakeLists.txt
kill/src/: main.c
src/: environ.h  execve_spawnp.c  execve_spawnp.h  lcwd.c  lcwd.h  lpipe.h  lproc.c  lproc.h  lprocess.c  lprocess.h  lprocess_group.c  lprocess_group.h  lspawn.c  lspawn.h  lutil.c  lutil.h  pipe.h  stdioChannel.h  stdio_channel.c  stdio_channel.h  stream.c  stream.h
